fix: add css to prevent shift in layot when scrollbar appears

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,6 +46,7 @@
 }
 
 :root {
+  scrollbar-gutter: stable;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
